--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>뉴스피드</title>
-  <link rel="stylesheet" href="styles.css">
-  <!-- Swiper CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Instagram Embed Gallery</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>뉴스피드</h1>
-  <div class="grid" id="rss-feed"></div>
-
-  <!-- Swiper.js 추가 -->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <!-- Masonry.js 추가 -->
-  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-  <!-- imagesLoaded.js 추가 -->
-  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-  <script src="script.js"></script>
+    <div id="content">
+        <h1>Instagram Embed Gallery</h1>
+        <div id="videoList">Loading...</div>
+    </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
