--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <div id="videoList">Loading...</div>
     </div>
     <script src="scripts.js"></script>
+    <script async defer src="https://www.instagram.com/embed.js"></script> <!-- 추가된 스크립트 -->
 </body>
 </html>
